--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             display: block;
             content: '';
         }
+
+        .afterclear .img-responsive{
+            display: block;
+    height: auto;
+    max-width: 100px;
+    max-height: 26px !important;
+    margin-bottom: 20px !important;
+        }
     </style>
 </head>
 <!--/head-->
