--- a/index.html
+++ b/index.html
@@ -163,6 +163,25 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="item" style="background-image: url(images/slider/bg3.jpg)">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-7">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">Help Finding Information Online</h1>
+                                    <div class="animation animated-item-2">
+                                        Every new computer that’s brought home from the store has an operating system installed onto it.
+                                    </div>
+                                    <a class="btn-slide white animation animated-item-3" href="#">Learn More</a>
+                                    <a class="btn-slide animation animated-item-3" href="#">Get Started</a>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
                 <!--/.item-->
 
             </div>
@@ -236,90 +255,7 @@
     </section>
     <!--/#feature-->
 
-    <section id="recent-works">
-        <div class="container">
-            <div class="center fadeInDown">
-                <h2>Recent Works</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
-            </div>
 
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-1.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-1.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-2.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-2.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-3.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-3.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-4.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-4.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-5.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-5.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-6.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-6.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--/.row-->
-            <div class="clearfix text-center">
-                <br>
-                <br>
-                <a href="#" class="btn btn-primary">Show More</a>
-            </div>
-        </div>
-        <!--/.container-->
-    </section>
-    <!--/#recent-works-->
 
     <section id="services" class="service-item">
         <div class="container">
