--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
     </header>
     <!--/header-->
 
-    <div class="page-title" style="background-image: url(images/page-title.png)">
+    <div class="page-title" style="background-image: url(images/page-title3.jpg)">
         <h1>Portfolio</h1>
     </div>
     
