--- a/services.html
+++ b/services.html
@@ -100,7 +100,7 @@
     </header><!--/header-->
 
 
-    <div class="page-title" style="background-image: url(images/page-title.png)">
+    <div class="page-title" style="background-image: url(images/page-title2.jpg)">
         <h1>Services</h1>
     </div>
     
