--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="portfolio.html">Our projects</a></li>
+                        <li><a href="associates.html">Associates</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
@@ -165,6 +166,63 @@
                 </div>
 
                 <div class="item" style="background-image: url(images/slider/bg3.jpg)">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-7">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">Help Finding Information Online</h1>
+                                    <div class="animation animated-item-2">
+                                        Every new computer that’s brought home from the store has an operating system installed onto it.
+                                    </div>
+                                    <a class="btn-slide white animation animated-item-3" href="#">Learn More</a>
+                                    <a class="btn-slide animation animated-item-3" href="#">Get Started</a>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(images/slider/bg4.jpg)">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-7">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">Help Finding Information Online</h1>
+                                    <div class="animation animated-item-2">
+                                        Every new computer that’s brought home from the store has an operating system installed onto it.
+                                    </div>
+                                    <a class="btn-slide white animation animated-item-3" href="#">Learn More</a>
+                                    <a class="btn-slide animation animated-item-3" href="#">Get Started</a>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(images/slider/bg5.jpg)">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-7">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">Help Finding Information Online</h1>
+                                    <div class="animation animated-item-2">
+                                        Every new computer that’s brought home from the store has an operating system installed onto it.
+                                    </div>
+                                    <a class="btn-slide white animation animated-item-3" href="#">Learn More</a>
+                                    <a class="btn-slide animation animated-item-3" href="#">Get Started</a>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(images/slider/bg5.jpg)">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-7">
@@ -345,7 +403,7 @@
     </section>
     <!--/#services-->
 
-    <section id="middle" class="skill-area" style="background-image: url(images/skill-bg.png)">
+    <section id="middle" class="skill-area" style="background-image: url(images/skill-bg.jpg)">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 fadeInDown">
